--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 PORT=4200
 USERNAME=calibrator
+DATABASE=mongodb+srv://calibrator:<PASSWORD>@clustercalibrator.omvu7rg.mongodb.net/
 DATABASE_PASSWORD=calibrator
