ref: implementing user routes

--- a/config.env
+++ b/config.env
@@ -1,5 +1,9 @@
 NODE_ENV=development
 PORT=4200
-USERNAME=calibrator
-DATABASE=mongodb+srv://calibrator:<PASSWORD>@clustercalibrator.omvu7rg.mongodb.net/
+# USERNAME=calibrator
+DATABASE=mongodb+srv://calibrator:<PASSWORD>@clustercalibrator.3olliuu.mongodb.net/
 DATABASE_PASSWORD=calibrator
+
+JWT_SECRET=komal-ultra-secure-and-ultra-long-secret 
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
