--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/polyfill": "^7.12.1",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.1.4",
@@ -48,6 +49,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "parcel-bundler": "^1.12.5",
     "typescript": "~5.0.2"
   }
 }
