--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "start": "nodemon server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url .",
-    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url ."
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +24,7 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
