ref: backend data loaded in frontend

--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "nodemon server.js",
+    "start": "nodemon app.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.0.0",
+    "@angular/animations": "^16.1.2",
+    "@angular/cdk": "^16.1.1",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/material": "^16.1.1",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@babel/polyfill": "^7.12.1",
+    "@syncfusion/ej2-angular-calendars": "^22.1.35",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -30,7 +33,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.3",
     "morgan": "^1.10.0",
+    "ngx-toastr": "^17.0.2",
     "nodemon": "^2.0.22",
+    "primeng": "^15.4.5-lts",
     "rxjs": "~7.8.0",
     "slugify": "^1.6.6",
     "tslib": "^2.3.0",
